# VR-Video-Toolbox-CE

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  README_CN.md  README_JP.md  VR_DLNA_Server.spec  VR_Video_Toolbox.spec  build_exe.bat  build_exe.py  main.py  make_update_package.py  pyproject.toml  vr_toolbox_config.json
area_selection_rect_crop/: logic.py  main.py
area_selection_vr2flat/: logic.py  main.py
config/: asr_correct_prompt.txt  subtitle_ass_templates.txt  subtitle_trans_config.json  translate_prompt.txt  translate_prompt_dubbing.txt
gpu_engine/: __init__.py  _cuda_env.py  _profile.py  fallback.py  files.py  mux.py  nv12_kernels.py  probe.py  pynv_io.py  restored_sidecar.py  runtime.py  v360_lut.py  vram_offload.py
i18n/: en.json  ja.json  zh.json
models/: get_lada_mosaic_restoration_model_generic_v1.2.pth.txt  get_lada_vr_mosaic_detection_model_v2_accurate.pt.txt  place_new_models_here.txt  在此放置新模型.txt
one_click/: logic.py  main.py
packaging/: hook-cupy.py  runtime_hook_cuda.py  runtime_hook_logging.py
release_readme/: readme.txt  readme_ja.txt  说明.txt
scripts/: bench_a2_compile.py  bench_a3_trt.py  bench_oneclick_crop_paste.py  bench_restore_paths.py  benchmark_decoder_queue_ab.py  debug_paste_hang_points.py  repro_engine_restore.py  verify_clip_padding.py  verify_cuda_graph_fullmodel.py  verify_graph_concurrency.py  verify_native_dcn.py  verify_native_dcn_fullmodel.py  verify_restorer_integration.py
summary/: omnivoice_short_text_repro.py  omnivoice_short_text_repro_result.json  summary_20260529_GPU_PIPELINE_IMPLEMENTATION_CN.md  summary_20260529_GPU_PIPELINE_REFACTOR_PLAN_CN.md  summary_20260530_LADA_ONNX_FUSION_RESEARCH_CN.md  summary_20260530_NATIVE_GPU_ENGINE_IMPL_PLAN_CN.md  summary_20260530_PRE_EXTRACT_MOSAIC_REGION_PLAN_CN.md  summary_20260531_NATIVE_BOTTLENECK_PROFILE_CN.md  summary_20260531_NATIVE_STREAM_FUSION_PLAN_CN.md  summary_20260531_RAWKERNEL_HANG_TROUBLESHOOTING_CN.md  summary_20260531_SESSION_NATIVE_GPU_SPEEDUP_CN.md  summary_20260531_SOURCE_SCAN_HOTFIX_V3_CN.md  summary_20260531_SOURCE_SCAN_REFACTOR_V2_CN.md  summary_20260531_SOURCE_TIME_FILTER_PLAN_CN.md  summary_20260601_SOURCE_SCAN_PAIRED_FINE_RECT_PLAN_CN.md  summary_20260604_ONECLICK_PIPELINE_OPTIMIZATION_PLAN_CN.md  summary_20260604_PAIRED_FRAMEKEY_CACHE_FIX_CN.md  summary_20260605_2DVR_FPS_OPTIMIZATION_PLAN_CN.md  summary_20260605_2DVR_VIDEO_STABILITY_PLAN_CN.md  summary_20260605_ONECLICK_DECODE_STAGE1_NOTRT_PLAN_CN.md  summary_20260605_ONECLICK_PIPELINE_REMAINING_IMPL_PLAN_CN.md  summary_20260605_PYNV_KEYFRAME_PREROLL_MISALIGNMENT_CN.md  summary_20260606_2DVR_PYNV_STAGE2_CN.md  summary_20260606_2DVR_VIDEO_STABILITY_PLAN_CN.md  summary_20260606_DECODE_OPTIMIZATION_POSTMORTEM_CN.md  summary_20260606_ONECLICK_DECODE_STAGE2_TUNING_PLAN_CN.md  summary_20260607_QWEN3_TTS_IN_PROCESS_FIX_CN.md  summary_20260607_QWEN3_TTS_SUBTITLE_AUDIO_FIX_CN.md  summary_20260607_QWEN3_TTS_SUBTITLE_AUDIO_FIX_EN.md  summary_20260608_DLNA_SI_AUTO_MIX_PLAN_CN.md  summary_20260610_CLONEVOICE_TRANSLATE_DEV_PLAN_CN.md  summary_20260610_ONECLICK_SUBRANGE_AUDIO_FIX_CN.md  summary_20260611_NVDEC_PTS_SEEK_FALSE_POSITIVE_CN.md  summary_20260611_NVDEC_PTS_SEEK_FALSE_POSITIVE_EN.md  summary_20260611_OMNIVOICE_SHORT_TEXT_CROSSLINGUAL_ISSUE_CN.md  summary_20260611_OMNIVOICE_SHORT_TEXT_CROSSLINGUAL_ISSUE_EN.md  summary_20260611_PRE_EXTRACT_AREA_GUARD_PLAN_CN.md  summary_20260614_CLONEVOICE_DUBBING_BANDIT_HANDOVER_CN.md  summary_20260622_ENGINE_DETECT_RESTORE_FUSION_PLAN_CN.md  summary_20260622_RESTORATION_CUDA_GRAPH_ACCEL_CN.md  (+16 more)
tests/: bench_gpu_vs_ffmpeg.py  dlna_client.py  test_2dvr_logic.py  test_app_config.py  test_clonevoice_duck_spans.py  test_clonevoice_gui_proofread.py  test_clonevoice_loudness.py  test_clonevoice_multi_clone.py  test_clonevoice_proofread.py  test_clonevoice_proofread_merge.py  test_clonevoice_scan.py  test_clonevoice_segment_engine.py  test_clonevoice_single_clone.py  test_clonevoice_source_language_defaults.py  test_clonevoice_translation_status.py  test_connection_manager.py  test_content_directory.py  test_dlna_server.py  test_engine_runner.py  test_fisheye_delta.py  test_fisheye_probe.py  test_gpu_extract_multi.py  test_gpu_fisheye_patch.py  test_gpu_stage_cleanup.py  test_home_subtitle_voice_split.py  test_i18n.py  test_keyframe_cutter.py  test_kotoba_alignment_patch.py  test_kotoba_word_timestamps_asr.py  test_media_library.py  test_mosaic_prescan.py  test_mux.py  test_native_mosaic_profile.py  test_one_click_pre_extract.py  test_one_click_split_bitrate.py  test_packaging_runtime.py  test_pynv_io_preroll.py  test_qwen3_tts_regression.py  test_release_readme.py  test_restored_sidecar.py  (+18 more)
tool_2dvr/: __init__.py  e2fgvi_backend.py  logic.py  main.py
tool_clonevoice/: __init__.py  diarize.py  dubbing.py  gui.py  (+13 more)
(+156 files in other folders)
