[project]
name = "vr-video-toolbox"
version = "0.1.0"
description = "VR Video Toolbox (CUDA EDITION) GUI"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "Pillow>=10.0.0",
    "pyinstaller>=6.11.1",
    "ffmpy3>=0.2.4",
    "faster-whisper>=1.1.1",
    # numpy >=2.2.2 is required by pyannote.audio 4.x (community-1 diarization).
    # Verified: CuPy 14.1 + PyNvVideoCodec + torch cu128 + faster-whisper all work
    # under numpy 2.4.6 (the old <2.1 bound was for CuPy 12.x, no longer used here).
    "numpy>=2.2.2",
    "auditok>=0.3.0",
    "onnxruntime-gpu",
    "huggingface-hub>=1.8.0",
    "keyring>=25.7.0",
    "requests>=2.32.5",
    # tool_si vendors Qwen3-TTS source instead of depending on qwen-tts.
    # Keep Transformers on a branch compatible with huggingface-hub 1.x.
    "transformers>=5.9.0",
    "accelerate>=1.12.0",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "av>=17.0.1",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    # GPU pipeline plus the built-in demosaic engine, all aligned to CUDA 12.8.
    # Keep torch/cupy/nvrtc on the same major CUDA line to avoid nvrtc conflicts.
    "pynvvideocodec>=2.1.0",
    # CuPy uses cuda12x plus 12.8 nvrtc/runtime/cccl wheels. These are
    # self-contained and do not require a system CUDA toolkit; sm_120 is
    # supported through nvrtc 12.8 and PTX JIT.
    "cupy-cuda12x>=14.0",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cuda-cccl-cu12>=12.9.27",
    # Built-in native_gpu engine: integrates Lada's torch pipeline in-process.
    # The cu128 wheel includes sm_120 kernels.
    "torch==2.8.0",
    "torchvision==0.23.0",
    "torchaudio==2.8.0",
    "ultralytics==8.4.4",
    "mmengine==0.10.7",
    # Depth Anything 3 vendored inference path for tool_2dvr.
    "omegaconf>=2.3.0",
    "einops>=0.8.0",
    "safetensors>=0.4.5",
    "opencv-python>=4.13.0.92",
    "whisperx",
    "omnivoice",
    "s3prl>=0.4.0",
    "scikit-learn>=1.4",
    "pyannote.audio>=4",
    "setuptools<81",
]

[tool.uv]
package = false
# whisperx 3.4.x conservatively caps ctranslate2<4.5 (the 4.4 wheels link cuDNN 8,
# which torch 2.8/cu128 does not ship -> GPU transcription hard-crashes on the
# missing cudnn_*64_8.dll). faster-whisper 1.2.1 already supports ctranslate2>=4.5,
# whose wheels use cuDNN 9 — exactly what torch bundles. Force 4.5+ so faster-whisper
# transcription runs on GPU via torch's cuDNN 9. whisperx only forwards audio to
# faster-whisper, so its <4.5 cap is safe to override.
override-dependencies = ["ctranslate2>=4.5.0"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[dependency-groups]
dev = [
    "pytest>=8.0",
]
